Working on a better db updater

--- a/source/Solution/Server/app.config
+++ b/source/Solution/Server/app.config
@@ -4,7 +4,7 @@
   </configSections>
   <connectionStrings>
     <add name="EnigmaMM.Properties.Settings.EMMConnectionString"
-      connectionString="Data Source=|DataDirectory|\EMM.sdf" providerName="Microsoft.SqlServerCe.Client.3.5" />
+      connectionString="Data Source=|DataDirectory|\data.sdf" providerName="Microsoft.SqlServerCe.Client.3.5" />
     <add name="EnigmaMM.Properties.Settings.LiveEMM" connectionString="Data Source=D:\Games\Minecraft\Server\EMM.sdf"
       providerName="Microsoft.SqlServerCe.Client.3.5" />
   </connectionStrings>
