--- a/source/Solution/Server/Properties/Settings.settings
+++ b/source/Solution/Server/Properties/Settings.settings
@@ -5,10 +5,10 @@
     <Setting Name="EMMConnectionString" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=|DataDirectory|\EMM.sdf&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;Data Source=|DataDirectory|\data.sdf&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;Microsoft.SqlServerCe.Client.3.5&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=|DataDirectory|\EMM.sdf</Value>
+      <Value Profile="(Default)">Data Source=|DataDirectory|\data.sdf</Value>
     </Setting>
     <Setting Name="LiveEMM" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
