--- a/source/Solution/Server/Server.csproj
+++ b/source/Solution/Server/Server.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Engine\Commands\Mappers\Overviewer.cs" />
     <Compile Include="Engine\Commands\MapsCommand.cs" />
     <Compile Include="Engine\DatabaseManager.cs" />
+    <Compile Include="Engine\Data\UpdateDb_1_2.cs" />
     <Compile Include="UsersForm.xaml.cs">
       <DependentUpon>UsersForm.xaml</DependentUpon>
     </Compile>
@@ -226,17 +227,8 @@
     <Resource Include="Resources\toolbar-restart-inactive.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Engine\Data\items.wiki.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Engine\Data\items.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Engine\Data\items.xsl">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
     <Content Include="Engine\Data\schema.sql" />
-    <Content Include="EMM.sdf" />
+    <Content Include="data.sdf" />
     <Resource Include="Engine\Scheduler\sample.scheduler.xml" />
     <Resource Include="Engine\Ionic.txt" />
     <Content Include="Engine\Ionic.Zip.Reduced.dll" />
