--- a/Solution/Server/Server.csproj
+++ b/Solution/Server/Server.csproj
@@ -47,7 +47,7 @@
     <PlatformTarget>x86</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\Build\</OutputPath>
+    <OutputPath>..\..\Build\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -106,6 +106,7 @@
     <Compile Include="Engine\Data\UpdateDb.cs" />
     <Compile Include="Engine\Data\UpdateDb_2_3.cs" />
     <Compile Include="Engine\Data\UpdateDb_3_4.cs" />
+    <Compile Include="Engine\Gui\ObservableUsers.cs" />
     <Compile Include="Engine\ServerMessageEventArgs.cs" />
     <Compile Include="Engine\Settings\SettingsFile.cs" />
     <Compile Include="Engine\StatusEnum.cs" />
