Dropped Framework requirement to Client Profile to reduce install overhead, and normalised AssemblyInfo versions and names

--- a/Solution/MinecraftSimulator/MinecraftSimulator.csproj
+++ b/Solution/MinecraftSimulator/MinecraftSimulator.csproj
@@ -12,8 +12,7 @@
     <RootNamespace>MinecraftSimulator</RootNamespace>
     <AssemblyName>MinecraftSimulator</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
+    <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
