--- a/Solution/Server/app.config
+++ b/Solution/Server/app.config
@@ -3,12 +3,10 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="EnigmaMM.Properties.Settings.EMMConnectionString"
-      connectionString="Data Source=|DataDirectory|\data.sdf" providerName="Microsoft.SqlServerCe.Client.3.5" />
-    <add name="EnigmaMM.Properties.Settings.LiveEMM" connectionString="Data Source=D:\Games\Minecraft\Server\EMM.sdf"
-      providerName="Microsoft.SqlServerCe.Client.3.5" />
+    <add name="EnigmaMM.Properties.Settings.EMMConnectionString" connectionString="Data Source=|DataDirectory|\data.sdf" providerName="Microsoft.SqlServerCe.Client.3.5"/>
+    <add name="EnigmaMM.Properties.Settings.LiveEMM" connectionString="Data Source=D:\Games\Minecraft\Server\EMM.sdf" providerName="Microsoft.SqlServerCe.Client.3.5"/>
   </connectionStrings>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0,Profile=Client"/>
   </startup>
 </configuration>
