--- a/Solution/Server/Server.csproj
+++ b/Solution/Server/Server.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Engine\Data\UpdateDb.cs" />
     <Compile Include="Engine\Data\UpdateDb_2_3.cs" />
     <Compile Include="Engine\Data\UpdateDb_3_4.cs" />
+    <Compile Include="Engine\Data\UpdateDb_4_5.cs" />
     <Compile Include="Engine\ServerMessageEventArgs.cs" />
     <Compile Include="Engine\Settings\SettingsFile.cs" />
     <Compile Include="Engine\StatusEnum.cs" />
